add student form for school

--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,3 +1,21 @@
 
 <h1 class="text-center lg:text-xl">Welcome <%= @model.school_name %> !</h1>
 
+
+<div>
+	<ul>
+	<% @model.class_count.times do %>
+
+		<li>
+			<%= render "students/form" %>
+
+		</li>
+		<br>
+
+	<% end %>
+	</ul>
+	
+</div>
+
+
+<%= link_to "Back", new_school_path %>
